<resources>
    <string name="app_name">Mi Calculadora 1.0</string>
    <string name="boton1">1</string>
    <string name="boton2">2</string>
    <string name="boton3">3</string>
    <string name="botonsuma">+</string>
    <string name="boton4">4</string>
    <string name="boton5">5</string>
    <string name="boton6">6</string>
    <string name="botonmenos">-</string>
    <string name="boton7">7</string>
    <string name="boton8">8</string>
    <string name="boton9">9</string>
    <string name="botonmult">*</string>
    <string name="botondiv">/</string>
    <string name="botonpunto">.</string>
    <string name="boton0">0</string>
    <string name="botonCA">CA</string>
    <string name="delete">DEL</string>
    <string name="potn">x^n</string>
    <string name="mod">Mod</string>
    <string name="botonigual">=</string>
    <string name="salir">salir</string>


</resources>
