<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#273747"
    android:orientation="vertical"
    tools:context="com.example.a0migue.calculadora1.mycalculadora.MainActivity">

    <TextView
        android:id="@+id/mitexto"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:textSize="45dp"
        android:textDirection="firstStrong"
        android:background="#1595A3"
        android:textColor="#FFFFFF"
        android:gravity="center|left"
        tools:layout_editor_absoluteY="-2dp"
        tools:layout_editor_absoluteX="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >
        <Button
            android:id="@+id/ca"
            android:text="@string/botonCA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#AE2C07"
            />
        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/potn"
            android:text="@string/potn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mod"
            android:text="@string/mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/boton1"
            android:text="@string/boton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/boton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton2" />

        <Button
            android:id="@+id/boton3"
            android:text="@string/boton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/botonsuma"
            android:text="@string/botonsuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/boton4"
            android:text="@string/boton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/boton5"
            android:text="@string/boton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/boton6"
            android:text="@string/boton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/botonmenos"
            android:text="@string/botonmenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/boton7"
            android:text="@string/boton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/boton8"
            android:text="@string/boton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/boton9"
            android:text="@string/boton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/botonmult"
            android:text="@string/botonmult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/botonpunto"
            android:text="@string/botonpunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/boton0"
            android:text="@string/boton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/botonigual"
            android:text="@string/botonigual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/botondiv"
            android:text="@string/botondiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/salir"
            android:text="@string/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
